@@ -8,7 +8,7 @@
 **JVM Accelerated Math** (or, jokingly, *just a matmul*). Fast quantized matrix multiplication for CPUs,
 from Java or C.
 
-jam supports Linux, Windows, and macOS, across many instruction sets — SSE3 through AVX-512-VNNI on x86,
+jam supports Linux, Windows, and macOS across many instruction sets: SSE3 through AVX-512-VNNI on x86,
 NEON / DotProd / I8MM on ARM, and even Metal on Apple GPUs.
 
 ---
@@ -22,9 +22,9 @@ NEON / DotProd / I8MM on ARM, and even Metal on Apple GPUs.
 - **Parallel.** Every call runs across multiple threads.
 - **No conversions.** Weights stay in their quantized format, byte-compatible with llama.cpp's `mul_mat`,
   so a `.gguf` tensor can be passed directly.
-- **Single JAR, no Java dependencies.** It auto-extracts and loads the `jam` native library for the current
-  OS/arch at runtime (override with `-Djam.native.library.path` / `JAM_NATIVE_LIBRARY_PATH`); which OS/arch
-  builds ship depends on the available native toolchains.
+- **No third-party runtime dependencies.** `jam-native` bundles and loads the native library for the current
+  OS/arch. Override its location with `-Djam.native.library.path` or `JAM_NATIVE_LIBRARY_PATH`. The available
+  native toolchains determine which OS/arch builds ship.
 
 ---
 
@@ -44,11 +44,11 @@ jam_status st = jam_mm(NULL,             // NULL = the global context
 
 ### Java
 
-`NativeJAM.global()` returns the native context (a `JAM`). Matmul is a bounds-checked call on native
-`MemorySegment`s.
+`JAM.providers()` discovers the installed backends in priority order. Matmul is a bounds-checked
+call on native `MemorySegment`s.
 
 ```java
-JAM jam = NativeJAM.global();
+JAM jam = JAM.providers().getFirst().create();
 int st = jam.mm(w, a, r, JAM.Q8_0, m, n, k);                 // contiguous: F32 activations + result
 
 // strided, with byte offsets (zero allocation over one large mmap'd buffer):
@@ -58,10 +58,32 @@ int s2 = jam.mm(w, wOff, JAM.Q8_0, k,   // weight: segment, byte offset, dtype, 
                 m, n, k);
 ```
 
-`JAM` is a minimal interface with three implementations that ship in their own modules: **`NativeJAM`**
-(`jam-native`, the libjam backend — the default), **`VectorJAM`** (`jam-vector`, a pure-Java SIMD backend
-on the Java Vector API), and **`ScalarJAM`** (`jam-scalar`, a portable Java reference). Implement `JAM` to
-add your own.
+`JAM` is a minimal interface in the `com.qxotic.jam` module. Its providers ship separately:
+`com.qxotic.jam.libjam` (`jam-native`, the default), `com.qxotic.jam.vector` (`jam-vector`), and
+`com.qxotic.jam.scalar` (`jam-scalar`). Implement `JAM.Provider` to add another backend.
+
+On the classpath, the Vector API backend requires:
+
+```sh
+java --add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED ...
+```
+
+On the module path, require only the API. Providers are discovered from their module descriptors:
+
+```java
+module app {
+    requires com.qxotic.jam;
+}
+```
+
+Grant native access to the providers that use it:
+
+```sh
+java --enable-native-access=com.qxotic.jam.libjam,com.qxotic.jam.vector \
+  --module-path ... --module app/com.example.Main
+```
+
+The scalar provider requires no launch flags.
 
 Supported quantizations include `Q4_0`, `Q8_0`, `Q4_K`, `Q5_K`, `Q6_K`, `MXFP4`, and `NVFP4`, plus dense
 `F32`/`F16`/`BF16`. Activations and result are always `F32`. The operands must be **native** segments, not
@@ -86,20 +108,19 @@ not yet implemented.
 
 ## Performance
 
-jam holds its own against — and on its native AVX-512-VNNI path often **beats** — llama.cpp's hand-tuned CPU
-kernels, at matched ISA. Prefill throughput (`pp512`, `R = W @ Aᵀ`), Llama-3.2-1B, 16 threads, Ryzen 9
-9950X3D (Zen 5):
+On its native AVX-512-VNNI path, jam often **beats** llama.cpp's hand-tuned CPU kernels at matched ISA.
+Prefill throughput (`pp512`, `R = W @ Aᵀ`), Llama-3.2-1B, 16 threads, Ryzen 9 9950X3D (Zen 5):
 
 ![jam vs llama.cpp prefill on AVX-512-VNNI](docs/bench-avx512.png)
 
-On its flagship VNNI tier jam wins four of five weight types — Q5_K by **2.2×**, Q6_K by **1.4×** — and the
-*same* int8 kernels span the whole x86 ladder, from the pre-AVX2 floor up to AVX-512:
+On its flagship VNNI tier, jam wins four of five weight types. Q5_K is **2.2×** faster and Q6_K is **1.4×**
+faster. The *same* int8 kernels span the whole x86 ladder, from the pre-AVX2 floor up to AVX-512:
 
 ![jam ÷ llama.cpp across ISA tiers](docs/bench-ratio.png)
 
 The sub-parity bars are the pre-VNNI Q4_0/Q8_0, where the int8 dot has no `vpdpbusd` to lean on; on the
-k-quants jam is at or above parity at every tier. Numbers are one machine / one model — run `jam_bench` and
-your own `pp512` to measure your hardware.
+k-quants jam is at or above parity at every tier. These numbers cover one machine and one model. Run
+`jam_bench` and your own `pp512` to measure your hardware.
 
 ---
 
@@ -145,7 +166,7 @@ mvn -pl jam/jam-vector -am package -DskipTests   # jars under jam/*/target (the 
 mvn -pl jam/jam-vector -am verify                # configure + build + JUnit incl. the parity suite
 ```
 
-**Or build just the native library with cmake** (no JVM — for the C API, or to pre-stage `dist/native/`
+**Or build just the native library with cmake** (no JVM, for the C API or to pre-stage `dist/native/`
 for a `-Djam.native.skip=true` jar build):
 
 ```sh
